plausible fix for stretched icon

--- a/src/client/styles/components/_swipe.scss
+++ b/src/client/styles/components/_swipe.scss
@@ -18,6 +18,7 @@
 
     .icon-back,
     .icon-list {
+      height: 28px;
       width: 28px;
       margin: 0px 5px;
       cursor: pointer;
